<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="processing_btn_yuantu">原图</string>
    <string name="processing_btn_huaijiu">怀旧</string>
    <string name="processing_btn_heibai">黑白</string>
    <string name="processing_btn_dipian">底片</string>
    <string name="processing_btn_jimu">积木</string>
    <string name="processing_btn_lianhuanhua">连环画</string>
    <string name="processing_btn_ruihua">锐化</string>
    <string name="processing_btn_sumiao">素描</string>
    <string name="dialog_colorpicker_txt_alpha">透明度</string>
    <string name="dialog_colorpicker_txt_saturation">饱和度</string>
    <string name="dialog_colorpicker_txt_value">深浅度</string>
    <string name="dialog_pen_txt_width">粗细</string>
    <string name="dialog_pen_txt_initialwidth">1</string>
    <string name="dialog_pen_txt_shape">线形</string>
    <string name="dialog_pen_txt_shape_fullline">实线</string>
    <string name="dialog_pen_txt_shape_dottedline1">虚线</string>
    <string name="dialog_pen_txt_shape_dottedline2">点划线</string>
    <string name="dialog_pen_txt_shape_lightningline">闪电</string>
    <string name="dialog_pen_txt_shape_circleline">球形</string>
    <string name="dialog_pen_txt_shape_rectline">方形</string>
    <string name="dialog_pen_txt_shape_brushline">毛笔</string>
    <string name="dialog_pen_txt_shape_markerline">马克笔</string>
    <string name="dialog_pen_txt_effect">特效</string>
    <string name="dialog_pen_txt_effect_full">实心</string>
    <string name="dialog_pen_txt_effect_blur">模糊</string>
    <string name="dialog_pen_txt_effect_hollow">空心</string>
    <string name="dialog_pen_txt_effect_relief">浮雕</string>
    <string name="drawer_btn_closedrawer">返回画布</string>
    <string name="drawer_btn_share">分享</string>
    <string name="drawer_btn_gallery">我的画廊</string>
    <string name="drawer_btn_help">帮助</string>
    <string name="fragment_gallery_txt_title">我的画廊</string>
    <string name="fragment_help_txt_title">帮助</string>
    <string name="tools_toptitle_txt_opendrawer">抽屉</string>
    <string name="tools_toptitle_txt_color">颜色</string>
    <string name="tools_toptitle_txt_pen">笔触</string>
    <string name="tools_toptitle_txt_clear">清空</string>
    <string name="tools_toptitle_txt_save">保存</string>
    <string name="tools_bottomtitle_txt_openpelbar">绘图</string>
    <string name="tools_bottomtitle_txt_opentransbar">编辑</string>
    <string name="tools_bottomtitle_txt_opencrossfill">填充</string>
    <string name="tools_bottomtitle_txt_opencanvasbgbar">背景</string>
    <string name="tools_bottomtitle_txt_openprocessingbar">特效</string>
    <string name="activity_gps_btn_setlocation">定位</string>
    <string name="activity_gps_btn_cancel">退出</string>
    <string name="activity_gps_btn_exportmap">导出图片</string>
    <string name="line_solid">实线</string>
    <string name="line_dashed">虚线</string>
    <string name="line_dotted">点划线</string>
    <string name="line_lighting">闪电</string>
    <string name="line_oval">球形</string>
    <string name="line_rect">方形</string>
    <string name="line_brush">毛笔</string>
    <string name="line_mark_pen">马克笔</string>
    <string name="effect_solid">实心</string>
    <string name="effect_blur">模糊</string>
    <string name="effect_hollow">空心</string>
    <string name="effect_relievo">浮雕</string>
    <string name="line_shape">线型</string>
    <string name="special_effect">特效</string>
    <string name="input_graffiti_name">给您的作品取个名字吧</string>
    <string name="input_text">请输入文本</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="is_processing">正在处理,请稍等...</string>
    <string name="is_filling_color">正在填色，请稍等...</string>
    <string name="insert_text">插入文字</string>
    <string name="color">颜色</string>
    <string name="content">内容</string>
    <string name="finger_graffiti">指尖涂鸦</string>
    <string name="task_processing">当前有任务正在进行，请稍等片刻...</string>
    <string name="ensure_clear">确定要清空？</string>
    <string name="exit_save">保存并退出</string>
    <string name="exit_tip">确定要退出吗？</string>
    <string name="exit_not_save">不保存并退出</string>
    <string name="exit">退出</string>
    <string name="name_conflict">该名称已存在，是否覆盖？</string>
    <string name="cover">覆盖</string>
    <string name="save_to">图片已保存到：%s</string>
    <string name="save_error">保存图片失败</string>
    <string name="save_error_reason">保存出错：%s</string>
    <string name="loading">正在载入，请稍等...</string>
    <string name="undoing">正在撤销，请稍等...</string>
    <string name="redoing">正在重做，请稍等...</string>
    <string name="select_pel_first">请先选中一个图形~</string>
    <string name="save_error_null">保存失败：作品名称不能为空~</string>
    <string name="dont_show_next_time">下次不再提示</string>
    <string name="draw_gesture_title">菜单栏手势说明</string>
    <string name="draw_gesture_tip">多点触摸屏幕可以打开或关闭菜单栏，比如3个手指触摸屏幕，指尖距离大些更有效哦。</string>
    <string name="got_it">知道了</string>
    <string name="text_gesture_title">文本手势说明</string>
    <string name="text_gesture_tip">两指水平方向收伸可以缩放文字，垂直方向收伸可以旋转文字；手指按住平移可以移动文字。</string>
    <string name="image_gesture_title">插图手势说明</string>
    <string name="image_gesture_tip">两指水平方向收伸可以缩放图片，垂直方向收伸可以旋转图片；手指按住平移可以移动图片。</string>
    <string name="text">文字</string>
    <string name="image">插图</string>
    <string name="insert_picture">插入图片</string>
    <string name="gallery">图库</string>
    <string name="shake_to_draw">摆动手机画图吧</string>
    <string name="begin_sensor_draw">您确定以(%d,%d)为起始点并开始重力绘图？</string>
    <string name="save_error_no_perm">保存失败：请先开启外部存储权限。</string>
    <string name="share">分享</string>
    <string name="share_work_app_module_link">我在%s-%s完成了一个作品，快来看一下吧！(下载链接:%s)</string>
    <string name="module_graffiti">指尖涂鸦</string>
    <string name="download_link">http://app.mi.com/details?id=com.ue.painter</string>
</resources>