<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/widget_size_10">

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/cpColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_colorpicker_txt_alpha"/>

        <com.larswerkman.holocolorpicker.OpacityBar
            android:id="@+id/obTransparencyBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_size_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_colorpicker_txt_saturation"/>

        <com.larswerkman.holocolorpicker.SaturationBar
            android:id="@+id/sbSaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_size_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/NormalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_colorpicker_txt_value"/>

        <com.larswerkman.holocolorpicker.ValueBar
            android:id="@+id/vbDeepness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivPickColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_size_15"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/selector_ok"/>
</LinearLayout>